[package]
name = "soundscape"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
cpal = "0.17"
crossbeam-channel = "0.5"
crossterm = "0.29.0"
env_logger = "0.11.8"
fundsp = "0.23"
log = "0.4.29"
rand = "0.9"
rundsp = "0.1.1"
tunes = "1.1.0"
